# pjecz-gob-mx-cli-typer

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  skills-lock.json
.agents/skills/typer-and-rich/: SKILL.md
.agents/skills/typer-and-rich/assets/: python-cli-demo.py
.agents/skills/typer-and-rich/assets/nested-typer-exceptions/: nested-typer-exception-explosion.py  nested-typer-exception-explosion_corrected_rich_console.py  nested-typer-exception-explosion_corrected_typer_echo.py  nested-typer-exception-explosion_naive_workaround.py
.agents/skills/typer-and-rich/assets/typer_examples/: console_containers_no_wrap.py
.agents/skills/typer-and-rich/references/: exception-handling.md  non-tty-patterns.md  rich-tables.md  testing-patterns.md
logs/: README.md
pjecz_gob_mx_cli_typer/: app.py
pjecz_gob_mx_cli_typer/commands/: astro.py  googleworkspace.py  rclone.py
pjecz_gob_mx_cli_typer/config/: settings.py
